--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ input, button {
 #new-task-submit:active {
 opacity: 0.6;
 }
+
 main {
   flex: 1 1 0%;
   padding: 2rem 1rem;
@@ -104,6 +105,43 @@ margin-bottom: 1rem;
   border-radius: 1rem;
   margin-bottom: 1rem;
 }
+
 #tasks .task .content .text {
   color: var(--light);
+}
+
+#tasks .task .content .text:not(:read-only) {
+  color: var(--pink)
+}
+
+#tasks .task .actions {
+  display: flex;
+  margin: 0 -0.5rem;
+}
+
+.task .actions button {
+  cursor: pointer;
+  margin: 0 0.5rem;
+  font-size: 1.125rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  transition: 0.4s;
+}
+
+.task .actions button:hover {
+  opacity: 0.8;
+}
+
+.task .actions button:active {
+opacity: 0.6;
+}
+
+.task .actions .edit {
+  background-image: repeating-linear-gradient(to right, var(--pink), var(--purple));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.task .actions .delete {
+  color: crimson;
 }
