--- a/main.css
+++ b/main.css
@@ -106,8 +106,16 @@ margin-bottom: 1rem;
   margin-bottom: 1rem;
 }
 
+#tasks .task .content {
+  flex: 1 1 0%;
+}
+
 #tasks .task .content .text {
   color: var(--light);
+  font-size: 1.125rem;
+  width: 100%;
+  display: block;
+  transition: 0.4s;
 }
 
 #tasks .task .content .text:not(:read-only) {
